MDEV-462: SHOW EXPLAIN: Assertion `table_list->table' fails in find_field_in_table_ref ... - Only allow basic constants as SHOW EXPLAIN arguments.